[project]
name = "comfyui-workflow-encrypt"
description = "Encrypt your comfyui workflow, and share it with key"
version = "1.0.0"
license = "LICENSE"
dependencies = ["cryptography"]

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-Workflow-Encrypt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Workflow-Encrypt"
Icon = ""
