[project]
name = "comfyui-workflow-encrypt"
description = "Encrypt your comfyui workflow, and share it with key"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["cryptography"]

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-Workflow-Encrypt"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "ComfyUI-Workflow-Encrypt"
Icon = ""
